--- a/fominha/index.html
+++ b/fominha/index.html
@@ -28,6 +28,7 @@
 			margin-left: 10%;
 			font-family: montserrat;
 			background-color: #f7c20f;
+			color: #333;
 		}
 
 		table {
@@ -94,8 +95,12 @@
 
 <body class="container">
 	
+
+<article class="mt-3">
+
 <img src="img/fominha.png"><br>
 
+<span> <!-- TABELA 01 -->
 <table class="table table-striped table-bordered" border="1" width="100%" style="border-color: #000;">
 	<thead>
 		<tr>
@@ -105,8 +110,8 @@
 			<th>ÁRABE</th>
 		</tr>
 	</thead>
-	
-	<tbody>
+
+<tbody>
 		<tr>
 			<td>&nbsp;01&nbsp;</td>
 			<td><strong>CHESFRANGO</strong><br>
@@ -115,99 +120,29 @@
 				<td><strong><em class="pç">R$</em> 7,00</strong></td>
 		</tr>
 	</tbody>
-	
+
 	<tbody>
 		<tr>
 			<td>&nbsp;02&nbsp;</td>
-			<td><strong>CHESFRANGO</strong><br>
-			<em style="margin-top: 0px;">frango (grelhado ou desfiado), queijo, alface e tomate</em></td>
-				<td><strong><em class="pç">R$</em> 7,00</strong></td>
-				<td><strong><em class="pç">R$</em> 7,00</strong></td>
+			<td><strong>FRANGO COM CATUPIRY</strong><br>
+			<em style="margin-top: 0px;">frango com catupiry (grelhado ou desfiado), alface e tomate</em></td>
+				<td><strong><em class="pç">R$</em> 8,00</strong></td>
+				<td><strong><em class="pç">R$</em> 8,00</strong></td>
 		</tr>
 	</tbody>
-	
+
 	<tbody>
 		<tr>
 			<td>&nbsp;03&nbsp;</td>
-			<td><strong>CHESFRANGO</strong><br>
-			<em style="margin-top: 0px;">frango (grelhado ou desfiado), queijo, alface e tomate</em></td>
-				<td><strong><em class="pç">R$</em> 7,00</strong></td>
-				<td><strong><em class="pç">R$</em> 7,00</strong></td>
+			<td><strong>FRANGO ESPECIAL</strong><br>
+			<em style="margin-top: 0px;">frango (grelhado ou desfiado), queijo, bacon, calabresa, molho e verdura</em></td>
+				<td><strong><em class="pç">R$</em> 12,00</strong></td>
+				<td><strong><em class="pç">R$</em> 12,00</strong></td>
 		</tr>
 	</tbody>
 	
-	<tbody>
-		<tr>
-			<td>&nbsp;04&nbsp;</td>
-			<td><strong>CHESFRANGO</strong><br>
-			<em style="margin-top: 0px;">frango (grelhado ou desfiado), queijo, alface e tomate</em></td>
-				<td><strong><em class="pç">R$</em> 7,00</strong></td>
-				<td><strong><em class="pç">R$</em> 7,00</strong></td>
-		</tr>
-	</tbody>
-	
-	<tbody>
-		<tr>
-			<td>&nbsp;05&nbsp;</td>
-			<td><strong>CHESFRANGO</strong><br>
-			<em style="margin-top: 0px;">frango (grelhado ou desfiado), queijo, alface e tomate</em></td>
-				<td><strong><em class="pç">R$</em> 7,00</strong></td>
-				<td><strong><em class="pç">R$</em> 7,00</strong></td>
-		</tr>
-	</tbody>
-	
-	<tbody>
-		<tr>
-			<td>&nbsp;06&nbsp;</td>
-			<td><strong>CHESFRANGO</strong><br>
-			<em style="margin-top: 0px;">frango (grelhado ou desfiado), queijo, alface e tomate</em></td>
-				<td><strong><em class="pç">R$</em> 7,00</strong></td>
-				<td><strong><em class="pç">R$</em> 7,00</strong></td>
-		</tr>
-	</tbody>
-	
-	<tbody>
-		<tr>
-			<td>&nbsp;07&nbsp;</td>
-			<td><strong>CHESFRANGO</strong><br>
-			<em style="margin-top: 0px;">frango (grelhado ou desfiado), queijo, alface e tomate</em></td>
-				<td><strong><em class="pç">R$</em> 7,00</strong></td>
-				<td><strong><em class="pç">R$</em> 7,00</strong></td>
-		</tr>
-	</tbody>
-	
-	<tbody>
-		<tr>
-			<td>&nbsp;08&nbsp;</td>
-			<td><strong>CHESFRANGO</strong><br>
-			<em style="margin-top: 0px;">frango (grelhado ou desfiado), queijo, alface e tomate</em></td>
-				<td><strong><em class="pç">R$</em> 7,00</strong></td>
-				<td><strong><em class="pç">R$</em> 7,00</strong></td>
-		</tr>
-	</tbody>
-	
-	<tbody>
-		<tr>
-			<td>&nbsp;09&nbsp;</td>
-			<td><strong>CHESFRANGO</strong><br>
-			<em style="margin-top: 0px;">frango (grelhado ou desfiado), queijo, alface e tomate</em></td>
-				<td><strong><em class="pç">R$</em> 7,00</strong></td>
-				<td><strong><em class="pç">R$</em> 7,00</strong></td>
-		</tr>
-	</tbody>
-	
-	<tbody>
-		<tr>
-			<td>&nbsp;10&nbsp;</td>
-			<td><strong>CHESFRANGO</strong><br>
-			<em style="margin-top: 0px;">frango (grelhado ou desfiado), queijo, alface e tomate</em></td>
-				<td><strong><em class="pç">R$</em> 7,00</strong></td>
-				<td><strong><em class="pç">R$</em> 7,00</strong></td>
-		</tr>
-	</tbody>
-	
-
 </table><br>
+</span> <!-- FIM TABELA 01 -->
 
 <h1 style="text-align: center;">FAÇA SEU PEDIDO PELO WHATSAPP!!!</h1><br>
 
@@ -218,6 +153,8 @@
 <p style="text-align: center;"><strong>Av. Humberto Monte, 997</strong><br>esquina com rua Francisca Clotilde<br>
 agradecemos sua preferência!
 </p><br>
+
+</article>
 
 <hr style="color: #fff;"><br>
 
