--- a/fominha/index.html
+++ b/fominha/index.html
@@ -28,12 +28,13 @@
 			margin-left: 10%;
 			font-family: montserrat;
 			background-color: #f7c20f;
-			color: #333;
+			color: black;
 		}
 
 		table {
 			border-collapse: collapse;
 			border-color: black;
+			color: black;
 		}
 
 		thead {
@@ -101,11 +102,14 @@
 <img src="img/fominha.png"><br>
 
 <span> <!-- TABELA 01 -->
+
+	<h1 style="text-align: center; color: black;">SANDUÍCHES</h1><br>
+
 <table class="table table-striped table-bordered" border="1" width="100%" style="border-color: #000;">
 	<thead>
 		<tr>
 			<th>Nº</th>
-			<th>SANDUÍCHE</th>
+			<th>SANDUÍCHES</th>
 			<th>&nbsp;&nbsp;BOLA&nbsp;</th>
 			<th>ÁRABE</th>
 		</tr>
@@ -140,9 +144,468 @@
 				<td><strong><em class="pç">R$</em> 12,00</strong></td>
 		</tr>
 	</tbody>
+
+	<tbody>
+		<tr>
+			<td>&nbsp;04&nbsp;</td>
+			<td><strong>CHESFRANGO CALABRESA</strong><br>
+			<em style="margin-top: 0px;">frango (grelhado ou desfiado) queijo, calabresa, molho e verdura</em></td>
+				<td><strong><em class="pç">R$</em> 10,00</strong></td>
+				<td><strong><em class="pç">R$</em> 10,00</strong></td>
+		</tr>
+	</tbody>
+
+	<tbody>
+		<tr>
+			<td>&nbsp;05&nbsp;</td>
+			<td><strong>CHESFRANGO BURGUER</strong><br>
+			<em style="margin-top: 0px;">frango (grelhado ou desfiado) queijo, calabresa, molho e verdura</em></td>
+				<td><strong><em class="pç">R$</em> 9,00</strong></td>
+				<td><strong><em class="pç">R$</em> 9,00</strong></td>
+		</tr>
+	</tbody>
+
+	<tbody>
+		<tr>
+			<td>&nbsp;06&nbsp;</td>
+			<td><strong>CHESFRANGO BACON</strong><br>
+			<em style="margin-top: 0px;">frango (grelhado ou desfiado) queijo, bacon, molho e verdura</em></td>
+				<td><strong><em class="pç">R$</em> 10,00</strong></td>
+				<td><strong><em class="pç">R$</em> 10,00</strong></td>
+		</tr>
+	</tbody>
+
+	<tbody>
+		<tr>
+			<td>&nbsp;07&nbsp;</td>
+			<td><strong>SUPER FRANGO</strong><br>
+			<em style="margin-top: 0px;">frango (grelhado ou desfiado) queijo, bacon, presunto, molho e verdura</em></td>
+				<td><strong><em class="pç">R$</em> 11,00</strong></td>
+				<td><strong><em class="pç">R$</em> 11,00</strong></td>
+		</tr>
+	</tbody>
+
+	<tbody>
+		<tr>
+			<td>&nbsp;08&nbsp;</td>
+			<td><strong>SUPER CALABRESA</strong><br>
+			<em style="margin-top: 0px;">calabresa, queijo, presunto, bacon, molho e verdura</em></td>
+				<td><strong><em class="pç">R$</em> 11,00</strong></td>
+				<td><strong><em class="pç">R$</em> 11,00</strong></td>
+		</tr>
+	</tbody>
+
+	<tbody>
+		<tr>
+			<td>&nbsp;09&nbsp;</td>
+			<td><strong>FRANGO COM VERDURA</strong><br>
+			<em style="margin-top: 0px;">calabresa, queijo, presunto, bacon, molho e verdura</em></td>
+				<td><strong><em class="pç">R$</em> 6,00</strong></td>
+				<td><strong><em class="pç">R$</em> 6,00</strong></td>
+		</tr>
+	</tbody>
+
+	<tbody>
+		<tr>
+			<td>&nbsp;10&nbsp;</td>
+			<td><strong>QUARTEIRÃO</strong><br>
+			<em style="margin-top: 0px;">carne, queijo, presunto, ovo, salcicha, molho e verdura</em></td>
+				<td><strong><em class="pç">R$</em> 11,00</strong></td>
+				<td><strong><em class="pç">R$</em> 11,00</strong></td>
+		</tr>
+	</tbody>
+
+	<tbody>
+		<tr>
+			<td>&nbsp;11&nbsp;</td>
+			<td><strong>BAURU</strong><br>
+			<em style="margin-top: 0px;">carne, queijo, presunto, ovo, molho e verdura</em></td>
+				<td><strong><em class="pç">R$</em> 10,00</strong></td>
+				<td><strong><em class="pç">R$</em> 10,00</strong></td>
+		</tr>
+	</tbody>
+
+	<tbody>
+		<tr>
+			<td>&nbsp;12&nbsp;</td>
+			<td><strong>CHESPRESUNTO</strong><br>
+			<em style="margin-top: 0px;">carne, queijo, presunto, molho e verdura</em></td>
+				<td><strong><em class="pç">R$</em> 7,00</strong></td>
+				<td><strong><em class="pç">R$</em> 7,00</strong></td>
+		</tr>
+	</tbody>
+
+	<tbody>
+		<tr>
+			<td>&nbsp;13&nbsp;</td>
+			<td><strong>CHESBACON</strong><br>
+			<em style="margin-top: 0px;">carne, queijo, bacon, molho e verdura</em></td>
+				<td><strong><em class="pç">R$</em> 9,00</strong></td>
+				<td><strong><em class="pç">R$</em> 9,00</strong></td>
+		</tr>
+	</tbody>
+
+	<tbody>
+		<tr>
+			<td>&nbsp;14&nbsp;</td>
+			<td><strong>CHESCALABRESA</strong><br>
+			<em style="margin-top: 0px;">carne, queijo, calabresa, molho e verdura</em></td>
+				<td><strong><em class="pç">R$</em> 9,00</strong></td>
+				<td><strong><em class="pç">R$</em> 9,00</strong></td>
+		</tr>
+	</tbody>
+
+	<tbody>
+		<tr>
+			<td>&nbsp;15&nbsp;</td>
+			<td><strong>EGGSCHEBURGUER</strong><br>
+			<em style="margin-top: 0px;">carne, queijo, ovo, bacon, molho e verdura</em></td>
+				<td><strong><em class="pç">R$</em> 11,00</strong></td>
+				<td><strong><em class="pç">R$</em> 11,00</strong></td>
+		</tr>
+	</tbody>
+
+	<tbody>
+		<tr>
+			<td>&nbsp;16&nbsp;</td>
+			<td><strong>EGGSBURGUER</strong><br>
+			<em style="margin-top: 0px;">carne, ovo, molho e verdura</em></td>
+				<td><strong><em class="pç">R$</em> 7,00</strong></td>
+				<td><strong><em class="pç">R$</em> 7,00</strong></td>
+		</tr>
+	</tbody>
+
+	<tbody>
+		<tr>
+			<td>&nbsp;17&nbsp;</td>
+			<td><strong>GULOSÃO</strong><br>
+			<em style="margin-top: 0px;">carne, queijo, presunto, ovo, bacon, calabresa, molho e verdura</em></td>
+				<td><strong><em class="pç">R$</em> 13,00</strong></td>
+				<td><strong><em class="pç">R$</em> 13,00</strong></td>
+		</tr>
+	</tbody>
+
+	<tbody>
+		<tr>
+			<td>&nbsp;18&nbsp;</td>
+			<td><strong>EXAGERADO</strong><br>
+			<em style="margin-top: 0px;">carne, queijo, presunto, ovo, bacon, calabresa, frango (grelhado ou desfiado), molho e verdura</em></td>
+				<td><strong><em class="pç">R$</em> 14,00</strong></td>
+				<td><strong><em class="pç">R$</em> 14,00</strong></td>
+		</tr>
+	</tbody>
+
+	<tbody>
+		<tr>
+			<td>&nbsp;19&nbsp;</td>
+			<td><strong>A MODA</strong><br>
+			<em style="margin-top: 0px;">carne, queijo, presunto, ovo, bacon, frango (grelhado ou desfiado), molho e verdura</em></td>
+				<td><strong><em class="pç">R$</em> 14,00</strong></td>
+				<td><strong><em class="pç">R$</em> 14,00</strong></td>
+		</tr>
+	</tbody>
 	
-</table><br>
-</span> <!-- FIM TABELA 01 -->
+</table>
+</span> <!-- FIM TABELA 01 --><br>
+
+<span> <!-- TABELA 02 -->
+
+	<h1 style="text-align: center; color: black;">PASTÉIS</h1><br>
+
+<table class="table table-striped table-bordered" border="1" width="100%" style="border-color: #000;">
+	<thead>
+		<tr>
+			<th>Nº</th>
+			<th>PASTÉIS</th>
+			<th>&nbsp;&nbsp;&nbsp;</th>
+		</tr>
+	</thead>
+
+	<tbody>
+		<tr>
+			<td style="width: 3.5rem;">&nbsp;20&nbsp;</td>
+			<td><strong>QUEIJO</strong><br>
+			<em style="margin-top: 0px;">queijo</em></td>
+				<td style="width: 7rem;"><strong><em class="pç">R$</em> 6,00</strong></td>
+		</tr>
+	</tbody>
+
+	<tbody>
+		<tr>
+			<td style="width: 3.5rem;">&nbsp;21&nbsp;</td>
+			<td><strong>MISTO</strong><br>
+			<em style="margin-top: 0px;">queijo e presunto</em></td>
+				<td style="width: 7rem;"><strong><em class="pç">R$</em> 6,00</strong></td>
+		</tr>
+	</tbody>
+
+	<tbody>
+		<tr>
+			<td style="width: 3.5rem;">&nbsp;22&nbsp;</td>
+			<td><strong>CARNE COM AZEITONA</strong><br>
+			<em style="margin-top: 0px;">carne, queijo e azeitona</em></td>
+				<td style="width: 7rem;"><strong><em class="pç">R$</em> 7,00</strong></td>
+		</tr>
+	</tbody>
+
+	<tbody>
+		<tr>
+			<td style="width: 3.5rem;">&nbsp;23&nbsp;</td>
+			<td><strong>FRANGO COM MILHO</strong><br>
+			<em style="margin-top: 0px;">frango (grelhado ou desfiado) queijo e milho</em></td>
+				<td style="width: 7rem;"><strong><em class="pç">R$</em> 7,00</strong></td>
+		</tr>
+	</tbody>
+
+	<tbody>
+		<tr>
+			<td style="width: 3.5rem;">&nbsp;24&nbsp;</td>
+			<td><strong>FRANGO COM BACON</strong><br>
+			<em style="margin-top: 0px;">frango (grelhado ou desfiado), bacon e queijo</em></td>
+				<td style="width: 7rem;"><strong><em class="pç">R$</em> 7,00</strong></td>
+		</tr>
+	</tbody>
+
+	<tbody>
+		<tr>
+			<td style="width: 3.5rem;">&nbsp;25&nbsp;</td>
+			<td><strong>FRANGO COM CALABRESA</strong><br>
+			<em style="margin-top: 0px;">frango (grelhado ou desfiado), calabresa e queijo</em></td>
+				<td style="width: 7rem;"><strong><em class="pç">R$</em> 7,00</strong></td>
+		</tr>
+	</tbody>
+
+	<tbody>
+		<tr>
+			<td style="width: 3.5rem;">&nbsp;26&nbsp;</td>
+			<td><strong>FRANGO COM CATUPIRY</strong><br>
+			<em style="margin-top: 0px;">frango (grelhado ou desfiado), queijo e catupiry</em></td>
+				<td style="width: 7rem;"><strong><em class="pç">R$</em> 7,00</strong></td>
+		</tr>
+	</tbody>
+
+	<tbody>
+		<tr>
+			<td style="width: 3.5rem;">&nbsp;27&nbsp;</td>
+			<td><strong>FRANGO COM CALABRESA E BACON</strong><br>
+			<em style="margin-top: 0px;">frango (grelhado ou desfiado), calabresa, bacon e queijo</em></td>
+				<td style="width: 7rem;"><strong><em class="pç">R$</em> 7,00</strong></td>
+		</tr>
+	</tbody>
+
+	<tbody>
+		<tr>
+			<td style="width: 3.5rem;">&nbsp;28&nbsp;</td>
+			<td><strong>A MODA DA CASA</strong><br>
+			<em style="margin-top: 0px;">frango (grelhado ou desfiado), queijo, bacon, presunto, molho e verdura</em></td>
+				<td style="width: 7rem;"><strong><em class="pç">R$</em> 10,00</strong></td>
+		</tr>
+	</tbody>
+
+</table>
+</span><br><!-- FIM TABELA 02 -->
+
+<span> <!-- TABELA 03 -->
+
+	<h1 style="text-align: center; color: black;">BATATA FRITA</h1><br>
+
+<table class="table table-striped table-bordered" border="1" width="100%" style="border-color: #000;">
+	<thead>
+		<tr>
+			<th>Nº</th>
+			<th>BATATA FRITA</th>
+			<th>&nbsp;&nbsp;&nbsp;</th>
+		</tr>
+	</thead>
+
+	<tbody>
+		<tr>
+			<td style="width: 3.5rem;">&nbsp;29&nbsp;</td>
+			<td><strong>BATATA FRITA (PORÇÃO)</strong><br></td>
+				<td style="width: 7rem;"><strong><em class="pç">R$</em> 6,00</strong></td>
+		</tr>
+	</tbody>
+
+	<tbody>
+		<tr>
+			<td style="width: 3.5rem;">&nbsp;30&nbsp;</td>
+			<td><strong>BATATA COM BACON E CHEDDAR</strong><br></td>
+				<td style="width: 7rem;"><strong><em class="pç">R$</em> 8,00</strong></td>
+		</tr>
+	</tbody>
+
+	<tbody>
+		<tr>
+			<td style="width: 3.5rem;">&nbsp;31&nbsp;</td>
+			<td><strong>BATATA COM CALABRESA E CHEDDAR</strong> <em>*cheddar ou catupiry<br></td>
+				<td style="width: 7rem;"><strong><em class="pç">R$</em> 8,00</strong></td>
+		</tr>
+	</tbody>
+
+</table>
+
+<h4>ADICIONAIS</h4>
+<ul class="list-group">
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    PRESUNTO
+    <span class="badge bg-primary rounded-pill">R$ 1,50</span>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    FRANGO
+    <span class="badge bg-primary rounded-pill">R$ 2,50</span>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    CALABRESA
+    <span class="badge bg-primary rounded-pill">R$ 3,50</span>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    QUEIJO
+    <span class="badge bg-primary rounded-pill">R$ 1,50</span>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    OVO
+    <span class="badge bg-primary rounded-pill">R$ 2,00</span>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    CARNE
+    <span class="badge bg-primary rounded-pill">R$ 3,00</span>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    BACON
+    <span class="badge bg-primary rounded-pill">R$ 3,50</span>
+  </li>
+</ul>
+
+</span><br> <!-- FIM TABELA 03 -->
+
+<span> <!-- TABELA 04 -->
+
+	<h1 style="text-align: center; color: black;">SUCOS E VITAMINAS</h1><br>
+
+<table class="table table-striped table-bordered" border="1" width="100%" style="border-color: #000;">
+	<thead>
+		<tr>
+			<th>Nº</th>
+			<th>SUCOS</th>
+			<th>&nbsp;&nbsp;&nbsp;</th>
+		</tr>
+	</thead>
+
+	<tbody>
+		<tr>
+			<td style="width: 3.5rem;">&nbsp;32&nbsp;</td>
+			<td><strong>GRAVIOLA</strong><br></td>
+				<td style="width: 7rem;"><strong><em class="pç">R$</em> 5,00</strong></td>
+		</tr>
+	</tbody>
+
+	<tbody>
+		<tr>
+			<td style="width: 3.5rem;">&nbsp;33&nbsp;</td>
+			<td><strong>MARACUJÁ</strong><br></td>
+				<td style="width: 7rem;"><strong><em class="pç">R$</em> 5,00</strong></td>
+		</tr>
+	</tbody>
+
+	<tbody>
+		<tr>
+			<td style="width: 3.5rem;">&nbsp;34&nbsp;</td>
+			<td><strong>CAJÁ</strong><br></td>
+				<td style="width: 7rem;"><strong><em class="pç">R$</em> 5,00</strong></td>
+		</tr>
+	</tbody>
+
+	<tbody>
+		<tr>
+			<td style="width: 3.5rem;">&nbsp;35&nbsp;</td>
+			<td><strong>GOIABA</strong><br></td>
+				<td style="width: 7rem;"><strong><em class="pç">R$</em> 4,00</strong></td>
+		</tr>
+	</tbody>
+
+	<tbody>
+		<tr>
+			<td style="width: 3.5rem;">&nbsp;36&nbsp;</td>
+			<td><strong>CAJÚ</strong><br></td>
+				<td style="width: 7rem;"><strong><em class="pç">R$</em> 4,00</strong></td>
+		</tr>
+	</tbody>
+
+	<tbody>
+		<tr>
+			<td style="width: 3.5rem;">&nbsp;37&nbsp;</td>
+			<td><strong>ACEROLA</strong><br></td>
+				<td style="width: 7rem;"><strong><em class="pç">R$</em> 4,00</strong></td>
+		</tr>
+	</tbody>
+
+	<tbody>
+		<tr>
+			<td style="width: 3.5rem;">&nbsp;38&nbsp;</td>
+			<td><strong>ABACAXI</strong><br></td>
+				<td style="width: 7rem;"><strong><em class="pç">R$</em> 4,00</strong></td>
+		</tr>
+	</tbody>
+
+	<thead>
+		<tr>
+			<th>Nº</th>
+			<th>VITAMINAS</th>
+			<th>&nbsp;&nbsp;&nbsp;</th>
+		</tr>
+	</thead>
+
+	<tbody>
+		<tr>
+			<td style="width: 3.5rem;">&nbsp;39&nbsp;</td>
+			<td><strong>CAJÁ</strong><br></td>
+				<td style="width: 7rem;"><strong><em class="pç">R$</em> 6,00</strong></td>
+		</tr>
+	</tbody>
+
+	<tbody>
+		<tr>
+			<td style="width: 3.5rem;">&nbsp;40&nbsp;</td>
+			<td><strong>GRAVIOLA</strong><br></td>
+				<td style="width: 7rem;"><strong><em class="pç">R$</em> 6,00</strong></td>
+		</tr>
+	</tbody>
+
+	<tbody>
+		<tr>
+			<td style="width: 3.5rem;">&nbsp;41&nbsp;</td>
+			<td><strong>MACACUJÁ</strong><br></td>
+				<td style="width: 7rem;"><strong><em class="pç">R$</em> 6,00</strong></td>
+		</tr>
+	</tbody>
+
+	<tbody>
+		<tr>
+			<td style="width: 3.5rem;">&nbsp;42&nbsp;</td>
+			<td><strong>ACEROLA</strong><br></td>
+				<td style="width: 7rem;"><strong><em class="pç">R$</em> 5,00</strong></td>
+		</tr>
+	</tbody>
+
+	<tbody>
+		<tr>
+			<td style="width: 3.5rem;">&nbsp;43&nbsp;</td>
+			<td><strong>GOIABA</strong><br></td>
+				<td style="width: 7rem;"><strong><em class="pç">R$</em> 5,00</strong></td>
+		</tr>
+	</tbody>
+
+	<tbody>
+		<tr>
+			<td style="width: 3.5rem;">&nbsp;44&nbsp;</td>
+			<td><strong>MANGA</strong><br></td>
+				<td style="width: 7rem;"><strong><em class="pç">R$</em> 5,00</strong></td>
+		</tr>
+	</tbody>
+
+</table>
+</span><br> <!-- FIM TABELA 04 -->
+
 
 <h1 style="text-align: center;">FAÇA SEU PEDIDO PELO WHATSAPP!!!</h1><br>
 
