--- a/orc/10101.html
+++ b/orc/10101.html
@@ -93,7 +93,7 @@
 			</div><hr>
 
 			<p class="text-end"><strong>PROPOSTA Nº 101-02</strong></p><hr>
-			<p style="margin-bottom: 0rem;">Orçamento Caixas 3 modelos</p><hr>
+			<p style="margin-bottom: 0rem;">Orçamento Caixas 3 modelos</p><br>
 	
 			<table class="table table-bordered mt-0">
 			  <thead>
@@ -153,7 +153,7 @@
 
 		<p><strong>Forma de pagamento:</strong> Entrada (50%) + (50%) dia da entrega</p>
 
-		<p><strong>Prazo de entrega:</strong> 10 a 15 dias uo a combinar</p>
+		<p><strong>Prazo de entrega:</strong> 10 a 15 dias ou "a combinar"</p>
 
 		<p><strong>Orçamentista:</strong> Berg Nunes</p>
 
@@ -161,6 +161,9 @@
 
 		<p class="text-center">________________________________________________</p>
 		<p class="text-center">LABE DIGITAL</p>
+
+
+		<footer>Quadra D - Presidente Kennedy - Fortaleza/CE</footer>
 
 	<!-- JavaScript Bundle with Popper -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
