--- a/centraldrive/index.html
+++ b/centraldrive/index.html
@@ -1,18 +1,56 @@
 <!DOCTYPE html>
 <html lang="pt-br" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="shortcut icon" href="img/cd.png">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+
     <title>Central Drive</title>
   </head>
-  <body class="container mt-3 text-center">
+
+  <body class="container mt-3 text-center bg-warning">
+
+    <img src="img/cd.png" alt="">
+
     <h1>Central Drive</h1>
     <h5>lista dos drivers</h5>
 
-    <table class="table table-hover mt-5">
+    <br><hr>
+
+    <p><strong>"CÓDIGOS USADOS NO ZELLO"</strong><br><br>
+
+<strong>Drive 0</strong> - Sem Passageiro<br>
+
+<strong>Drive 5.5</strong> - Tudo Ok.<br>
+
+<strong>Drive 5.1</strong> - Preciso de Monitoramento <br>
+
+<strong>Drive 5.0</strong> - Urgênte, Emergência <br>
+
+<strong>MPV</strong> - Mapa Vermelho Dinâmica <br>
+
+<strong>Última Forma</strong> - Cancelamento <br>
+
+<strong>Drive 15</strong> (Homens trabalhando nas Ruas) <br>
+
+<strong>Drive 17</strong> Locais ZONA DE RISCOS ATENTADOS <br>
+
+<strong>QTH</strong> - Localização <br>
+
+<strong>S15</strong> - Deslocamento <br>
+
+<strong>S49</strong> - Lanche, Almoço, Jantar <br> <br>
+
+<strong>Obs: Canal quando estiver em DRIVE fica proibido sua utilização momentânea. <br>
+
+*É proibido informar SOS no canal.</strong></p><br>
+
+    <table class="table table-hover mt-5 bg-warning">
         <thead>
-          <tr>
+          <tr class="align-middle">
+            <th scope="col">PERFIL</th>
             <th scope="col">#NUMERO</th>
             <th scope="col">NOME</th>
             <th scope="col">CATEGORIA</th>
@@ -21,24 +59,118 @@
         </thead>
 
         <tbody>
-          <tr>
-            <th scope="row">01</th>
-            <td class="fw-bold">JAIRO</td>
-            <td>ADM</td>
-            <td><button class="btn btn-primary" type="button" name="button">RESERVADO</button></td>
+          <tr class="text-center align-middle">
+            <td><img src="img/jairo.png"></td>
+            <th class="mt-3" scope="row"><button class="btn btn-outline-dark"><p class="h3 pb-2">01<p/></th>
+            <th>JAIRO</th>
+            <th>ADM</th>
+            <td><button class="btn btn-secondary" type="button" name="button">RESERVADO</button></td>
           </tr>
 
         <tbody>
-          <tr>
-            <th scope="row">02</th>
-            <td class="fw-bold">#</td>
-            <td>DRIVE</td>
-            <td><button class="btn btn-success" type="button" name="button">LIVRE</button></td>
+          <tr class="text-center align-middle">
+            <td><img src="img/dea.png"></td>
+            <th class="mt-3" scope="row"><button class="btn btn-outline-dark"><p class="h3 pb-2">02<p/></th>
+            <td class="fw-bold">ANDRÉA</td>
+            <th>ADM</th>
+            <td><button class="btn btn-secondary" type="button" name="button">RESERVADO</button></td>
+          </tr>
+
+        <tbody>
+          <tr class="text-center align-middle">
+            <td><img src="img/cd.png"></td>
+            <th class="mt-3" scope="row"><button class="btn btn-outline-dark"><p class="h3 pb-2">03<p/></th>
+            <td class="fw-bold">*nome*</td>
+            <th>DRIVE</th>
+            <td><button class="btn btn-success" type="button" name="button">DISPONÍVEL</button></td>
+          </tr>
+
+        <tbody>
+          <tr class="text-center align-middle">
+            <td><img src="img/cd.png"></td>
+            <th class="mt-3" scope="row"><button class="btn btn-outline-dark"><p class="h3 pb-2">04<p/></th>
+            <td class="fw-bold">*nome*</td>
+            <th>DRIVE</th>
+            <td><button class="btn btn-success" type="button" name="button">DISPONÍVEL</button></td>
+          </tr>
+
+        <!-- 05 -->
+        <tbody>
+          <tr class="text-center align-middle">
+            <td><img src="img/cd.png"></td>
+            <th class="mt-3" scope="row"><button class="btn btn-outline-dark"><p class="h3 pb-2">05<p/></th>
+            <td class="fw-bold">*nome*</td>
+            <th>DRIVE</th>
+            <td><button class="btn btn-success" type="button" name="button">DISPONÍVEL</button></td>
+          </tr>
+
+        <tbody>
+          <tr class="text-center align-middle">
+            <td><img src="img/cd.png"></td>
+            <th class="mt-3" scope="row"><button class="btn btn-outline-dark"><p class="h3 pb-2">06<p/></th>
+            <td class="fw-bold">*nome*</td>
+            <th>DRIVE</th>
+            <td><button class="btn btn-success" type="button" name="button">DISPONÍVEL</button></td>
+          </tr>
+
+        <tbody>
+          <tr class="text-center align-middle">
+            <td><img src="img/cd.png"></td>
+            <th class="mt-3" scope="row"><button class="btn btn-outline-dark"><p class="h3 pb-2">07<p/></th>
+            <td class="fw-bold">*nome*</td>
+            <th>DRIVE</th>
+            <td><button class="btn btn-success" type="button" name="button">DISPONÍVEL</button></td>
+
+        <tbody>
+          <tr class="text-center align-middle">
+            <td><img src="img/cd.png"></td>
+            <th class="mt-3" scope="row"><button class="btn btn-outline-dark"><p class="h3 pb-2">08<p/></th>
+            <td class="fw-bold">*nome*</td>
+            <th>DRIVE</th>
+            <td><button class="btn btn-success" type="button" name="button">DISPONÍVEL</button></td>
+          </tr>
+
+        <tbody>
+          <tr class="text-center align-middle">
+            <td><img src="img/cd.png"></td>
+            <th class="mt-3" scope="row"><button class="btn btn-outline-dark"><p class="h3 pb-2">09<p/></th>
+            <td class="fw-bold">*nome*</td>
+            <th>DRIVE</th>
+            <td><button class="btn btn-success" type="button" name="button">DISPONÍVEL</button></td>
+          </tr>
+
+        <tbody>
+          <tr class="text-center align-middle">
+            <td><img src="img/cd.png"></td>
+            <th class="mt-3" scope="row"><button class="btn btn-outline-dark"><p class="h3 pb-2">10<p/></th>
+            <td class="fw-bold">*nome*</td>
+            <th>DRIVE</th>
+            <td><button class="btn btn-success" type="button" name="button">DISPONÍVEL</button></td>
           </tr>
 
         </tbody>
 
       </table>
+
+      <br>
+      <hr>
+      <br>
+
+      <p>Para efetivar a entrada no grupo é necessário fazer o pagamento do brasão "ima" com a numeração escolhida dentro das disponíveis.</p>
+
+      <a href="https://nubank.com.br/pagar/15spx0/rwGvfXoeKI" target="_blank">
+        <button class="btn btn-primary btn-sm mx-auto d-block">
+            <strong>PIX 10,00</strong></button></a>
+
+      <br>
+      <hr>
+      <br>
+
+      <footer>© Copyright 2022 | Todos os direitos reservados – Central Drive – Desenvolvido por BERG</footer>
+
+      <br>
+
+
 
   </body>
 </html>
