--- a/centraldrive/index.html
+++ b/centraldrive/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 
     <style media="screen">
-    
+
     h1, h2, h3, h4 {
       text-align: center;
     }
@@ -27,6 +27,10 @@
     td, th, {
       vertical-align: middle;
       text-align: center;
+    }
+
+    p {
+      text-align: left;
     }
 
     </style>
