--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<body class="container bg-secondary">
 		<h1 class="mt-3">Olá Mundo!</h1>
 
-		Projetos @berg_dev
+		<p>@berg_dev</p>
+		
 	</body>
 </html>
