--- a/helloworld.html
+++ b/helloworld.html
@@ -11,6 +11,30 @@
 <body>
    <h1>Olá Mundo!</h1>
 
+   <article class="container"><br>
+
+    <script>
+
+        //JavaScript:
+        console.log("Hello, World!");
+
+        //Python:
+        print("Hello, World!")
+
+        //Java:
+        public class HelloWorld {
+            public static void main(String[] args) {
+                System.out.println("Hello, World!");
+            }
+        }
+
+
+
+    </script>
+
+
+   </article>
+
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
