--- a/meuslinkscs.html
+++ b/meuslinkscs.html
@@ -15,7 +15,7 @@
 	<style type="text/css">
 		
 		p, h1, h2, h3, h4, h5, h6 {
-			font-family: montserrat;
+			font-family: Arial, Helvetica, sans-serif; 
             color: azure;
 		}
 
